Выполнено ДЗ, урок 7 (сделано более по-людски)